completed readme.md

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>VueMarkdownBlog 最简单的博客程序</title>
-    <link href=/static/css/app.9fd5205f584ca4d4dbd8d75c7893f0bf.css rel=stylesheet>
+    <title>vmblog</title>
+    <link href=/static/css/app.0f44e6161f69bf1d5f6c1d7d39952b49.css rel=stylesheet>
 </head>
 
 <body>
     <div id=app></div>
     <script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
-    <script type=text/javascript src=/static/js/vendor.98bdc6a8024531f2902c.js></script>
-    <script type=text/javascript src=/static/js/app.1b3c15b63a6d9f49feb0.js></script>
+    <script type=text/javascript src=/static/js/vendor.9da56c788113dd4eece5.js></script>
+    <script type=text/javascript src=/static/js/app.d2500b1075544c4f4993.js></script>
 </body>
 
 </html>
