--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <title>vmblog</title>
-    <link href=/static/css/app.0f44e6161f69bf1d5f6c1d7d39952b49.css rel=stylesheet>
+    <link href=static/css/app.46789fa86d849570c1d90e6636c8fd72.css?951af9446aca0dd0a3ef rel=stylesheet>
 </head>
 
 <body>
     <div id=app></div>
-    <script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
-    <script type=text/javascript src=/static/js/vendor.9da56c788113dd4eece5.js></script>
-    <script type=text/javascript src=/static/js/app.d2500b1075544c4f4993.js></script>
+    <script type=text/javascript src=static/js/manifest.2ae2e69a05c33dfc65f8.js?951af9446aca0dd0a3ef></script>
+    <script type=text/javascript src=static/js/vendor.ed8499e79909c7b137db.js?951af9446aca0dd0a3ef></script>
+    <script type=text/javascript src=static/js/app.ccddbc0e1faaeacc3a94.js?951af9446aca0dd0a3ef></script>
 </body>
 
 </html>
