--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset=utf-8>
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>vmblog</title>
-    <link href=static/css/app.46789fa86d849570c1d90e6636c8fd72.css?951af9446aca0dd0a3ef rel=stylesheet>
-</head>
-
-<body>
-    <div id=app></div>
-    <script type=text/javascript src=static/js/manifest.2ae2e69a05c33dfc65f8.js?951af9446aca0dd0a3ef></script>
-    <script type=text/javascript src=static/js/vendor.ed8499e79909c7b137db.js?951af9446aca0dd0a3ef></script>
-    <script type=text/javascript src=static/js/app.ccddbc0e1faaeacc3a94.js?951af9446aca0dd0a3ef></script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>vmblog</title><link href=/static/css/app.f4c40c81ab37fdb6e305113f4c036007.css?eb16d1418873dd462d7b rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js?eb16d1418873dd462d7b></script><script type=text/javascript src=/static/js/vendor.38209bb15ceaf8c8d69d.js?eb16d1418873dd462d7b></script><script type=text/javascript src=/static/js/app.0240123d3a0ec2dd7469.js?eb16d1418873dd462d7b></script></body></html>
